jobs-platform/05-allow-services-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-egress
  namespace: jobs-platform
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: jobs-platform
    ports:
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgress
    ports:
    - port: 5432
      protocol: TCP
  - ports:
    - port: 443
      protocol: TCP
